# 3d-cellular-automata

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  source-list.md
'/: rotating_camera.rs
.github/workflows/: CI.yml  main-test.yml  main.yml
assets/shaders/: cell.wgsl
src/: cell_render.rs  color_method.rs  helper.rs  main.rs  neighbours.rs  render.rs  rotating_camera.rs  rule.rs  setup.rs  simple_cell.rs  state_changed.rs  tests.rs  utilities.rs
src/cells/: mod.rs  settings.rs  sims.rs
src/cells/multi_dimensional/: mod.rs  multi_dimensional.rs
src/cells/multi_threaded/: mod.rs  multi_threaded.rs
src/cells/simple_cell/: mod.rs  simple_cell.rs
src/cells/single_threaded/: simple_cell.rs
