[package]
name = "cellular_automata"
version = "0.2.1"
edition = "2021"

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bytemuck = "*"
rand = "*"
futures-lite = "1.12.0"
bevy_fly_camera = "0.10.0"
#bevy_mod_debugdump = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for dependencies in the release profile
[profile.release.package."*"]
opt-level = 3