[package]
name = "cellular_automata"
version = "0.2.1"
edition = "2021"

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bytemuck = "*"
rand = "*"
futures-lite = "1.12.0"
bevy_fly_camera = "0.10.0"

#bevy_mod_debugdump = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for everything in the release profile
[profile.release]
opt-level = 3

# Source: Bevy Examples
[profile.wasm-dev]
# Use release profile as default values
inherits = "dev"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1