[package]
name = "cellular_automata"
version = "0.2.2"
edition = "2021"
authors = ["Lewis Morris"]
repository = "https://github.com/Lew-Morris/3d-cellular-automata"

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bytemuck = "*"
rand = "*"
futures-lite = "1.12.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
num_cpus = "1.15.0"
approx = "0.5.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations in the release profile
[profile.release]
opt-level = 3

# Source: Bevy Examples
[profile.wasm-dev]
inherits = "dev"
opt-level = "z"
lto = "fat"
codegen-units = 1